solved li item gey background issue, overflow scroll taken away

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     text-align: center;
     font-size: 20px;
     color: white;
-    background-color: #fff;
+    background-color: white;
     border-color: black;
 }
 
@@ -28,11 +28,10 @@
 }
 
 p {
-    overflow: scroll;
+    font-size: 1.5rem;
 }
 
 span {
-    background-color: white;
     font-size: 1.5rem;
     font-weight: bold;
 }
